--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc-silent -p ./tsconfig.json --suppress @ && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.0",
-    "three": "^0.159.0"
+    "three": "^0.159.0",
+    "tsc-silent": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
